[package]
name = "burn_basics"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
burn = {version = "0.17.0", features = ["ndarray", "autodiff"]}
burn-autodiff = "0.17.0"
csv = "1.3.1"
futures-util = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = {version = "0.26.2", features = ["native-tls"]}
tungstenite = "0.26.2"
